feat : add app info controller using configuration properties

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
-    name: travel-booking-system
+    name: Flight Service
+    version: 0.0.1-SNAPSHOT
+
 
 server:
   port: 8899
