refactor : disable test-data-enabled

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: Flight Service
     version: 0.0.1-SNAPSHOT
-    test-data-enabled: true
+    test-data-enabled: false
 
 server:
   port: 8899
