--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,21 @@ spring:
   application:
     name: flight-service
   config:
-    import: "optional:configserver:"
+#    import: "optional:configserver:"
+    import: "configserver:"
   cloud:
     config:
       uri: http://localhost:6464
+      request-connect-timeout: 5000
+      request-read-timeout: 5000
+      fail-fast: true
+      retry:
+        max-attempts: 6
+        initial-interval: 1000
+        max-interval: 2000
+        multiplier: 1.1
 
 application:
-  name: Flight Service
-  version: 0.0.1-SNAPSHOT
   environment: Local
 
 server:
