--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,14 @@ spring:
   application:
     name: flight-service
   config:
-#    import: "optional:configserver:"
-    import: "configserver:"
+    import: "optional:configserver:"
+#    import: "configserver:"
   cloud:
     config:
       uri: http://localhost:6464
       request-connect-timeout: 5000
       request-read-timeout: 5000
-      fail-fast: true
+      fail-fast: false
       retry:
         max-attempts: 6
         initial-interval: 1000
