--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 ext {
 	lombokVersion = '1.18.38'
 	springCloudVersion = '2025.0.0'
+	mapstructVersion = '1.6.3'
 }
 
 dependencies {
@@ -28,6 +29,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
 //	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	// implementation 'org.springframework.retry:spring-retry'
 
