--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,12 @@ repositories {
 ext {
 	lombokVersion = '1.18.38'
 	springCloudVersion = '2025.0.0'
+	testContainersVersion = '1.21.3'
 	mapstructVersion = '1.6.3'
 }
 
 dependencies {
+
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
@@ -31,26 +33,32 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
 //	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-	// implementation 'org.springframework.retry:spring-retry'
+//	implementation 'org.springframework.retry:spring-retry'
 
 	compileOnly "org.projectlombok:lombok:$lombokVersion"
+
+	runtimeOnly 'org.postgresql:postgresql'
+
 	annotationProcessor "org.projectlombok:lombok:$lombokVersion"
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
+	testImplementation "org.testcontainers:postgresql"
 
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	testCompileOnly "org.projectlombok:lombok:$lombokVersion"
+
 	testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
 
-	runtimeOnly 'org.postgresql:postgresql'
 }
 
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
+		mavenBom "org.testcontainers:testcontainers-bom:${testContainersVersion}"
 	}
 }
 
