--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,9 +22,12 @@ spring:
     hikari:
       maximum-pool-size: 5
       connection-timeout: 2000
-  sql:
-    init:
-      mode: always
+  liquibase:
+    change-log: classpath:/db/changelog/db.changelog-master.yml
+  #  sql:
+#    init:
+#      mode: always
+
 
 application:
   environment: Local
