--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -15,14 +15,14 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 24
+          java-version: 21
           cache: gradle
       - name: Code vulnerability scanning
         uses: anchore/scan-action@v4
         id: scan
         with:
           path: "${{ github.workspace }}"
-          fail-build: false
+          fail-build: true
           severity-cutoff: high
       - name: Upload vulnerability report
         uses: github/codeql-action/upload-sarif@v3
