--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -1,6 +1,11 @@
 name: Commit Stage
 on: push
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ghcr.io/vasimvahabov/flight-service
+  VERSION: 0.1.1
+
 jobs:
   build:
     name: Build and Test
@@ -9,22 +14,22 @@ jobs:
       contents: read
       security-events: write
     steps:
-      - name: Checkout source code
+      - name: Checkout the source code
         uses: actions/checkout@v4
-      - name: Set up JDK
+      - name: Set up the JDK
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
           cache: gradle
-      - name: Code vulnerability scanning
+      - name: Scan the code vulnerability
         uses: anchore/scan-action@v4
         id: scan
         with:
           path: "${{ github.workspace }}"
           fail-build: true
           severity-cutoff: high
-      - name: Upload vulnerability report
+      - name: Upload the vulnerability report
         uses: github/codeql-action/upload-sarif@v3
         if: success() || failure()
         with:
@@ -33,3 +38,47 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew build
+  package:
+    name: Package and Publish
+    runs-on: ubuntu-22.04
+    if: ${{ github.ref == 'refs/heads/main' }}
+    needs: [ build ]
+    permissions:
+      contents: read
+      packages: write
+      security-events: write
+    steps:
+      - name: Checkout the source code
+        uses: actions/checkout@v4
+      - name: Set up the JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 21
+          cache: gradle
+      - name: Build the container image
+        run:
+          chmod +x gradlew
+          ./gradlew bootBuildImage \
+          --imageName ${{ env.IMAGE_NAME }}
+          --version ${{ env.VERSION }}
+      - name: Scan OCI the image vulnerability
+        uses: anchore/scan-action@v4
+        id: scan
+        with:
+          image: ${{ env.IMAGE_NAME }} / ${{ env.VERSION }}
+          fail-build: false
+          severity-cutoff: high
+      - name: Upload the vulnerability report
+        uses: github/codeql-action/upload-sarif@v3
+        if: success() || failure()
+        with:
+          sarif_file: ${{ steps.scan.outputs.sarif }}
+      - name: Log into the container
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish the container image
+        run: docker push ${{ env.IMAGE_NAME }}:${{ env.VERSION }}
