--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -41,7 +41,7 @@ jobs:
   package:
     name: Package and Publish
     runs-on: ubuntu-22.04
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/dev' }}
     needs: [ build ]
     permissions:
       contents: read
