fix: Build the container image step in Package and Publish job commit-stage.yml

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -60,7 +60,7 @@ jobs:
         run:
           chmod +x gradlew
           ./gradlew bootBuildImage \
-          --imageName ${{ env.IMAGE_NAME }}
+          --imageName ${{ env.IMAGE_NAME }} \
           --version ${{ env.VERSION }}
       - name: Scan OCI the image vulnerability
         uses: anchore/scan-action@v4
