--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -57,7 +57,7 @@ jobs:
           java-version: 21
           cache: gradle
       - name: Build the container image
-        run:
+        run: |
           chmod +x gradlew
           ./gradlew bootBuildImage \
           --imageName ${{ env.IMAGE_NAME }} \
@@ -82,7 +82,7 @@ jobs:
         if: success() || failure()
         with:
           sarif_file: ${{ steps.scan.outputs.sarif }}
-      - name: Log into the container
+      - name: Log into the container registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
