fix: Build the container image step in Package and Publish job commit-stage.yml

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Build the container image
         run: |
           chmod +x gradlew
-          ./gradlew printParameters bootBuildImage \
+          ./gradlew printParamete btBuildImage \
           --imageName ${{ env.IMAGE_NAME }} \
           --version ${{ env.VERSION }}
       - name: Scan OCI the image vulnerability
