fix: Build the container image step in Package and Publish job commit-stage.yml

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -60,8 +60,8 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew printParameters bootBuildImage \
-          -PimageName ${{ env.IMAGE_NAME }} \
-          -Pversion ${{ env.VERSION }}
+          -PimageName=${{ env.IMAGE_NAME }} \
+          -Pversion=${{ env.VERSION }}
       - name: Scan OCI the image vulnerability
         uses: anchore/scan-action@v4
         id: scan
