--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,8 @@ spring:
   #  sql:
 #    init:
 #      mode: always
-
+  lifecycle:
+    timeout-per-shutdown-phase: 15s
 
 application:
   environment: Local
@@ -47,3 +48,4 @@ server:
     threads:
       min-spare: 5
       max: 50
+  shutdown: graceful
