refactor : remove version requirement on build, bootJar, and jar tasks

--- a/build.gradle
+++ b/build.gradle
@@ -91,11 +91,34 @@ tasks.named('bootBuildImage').configure {
             }
         }
     }
+
+    builder = "docker.io/paketobuildpacks/builder-jammy-base"
+    version = project.findProperty("version")
+    imageName = "ghcr.io/vasimvahabov/flight-service" + ":" + version
+    publish = project.findProperty("publishImage")?.toBoolean() ?: false
+    environment = [
+            "BP_JVM_VERSION": JavaVersion.current().majorVersion
+    ]
+    verboseLogging = true
+
+    docker {
+        publishRegistry {
+            username = project.findProperty("registryUsername")
+            password = project.findProperty("registryToken")
+            url = project.findProperty("registryUrl")
+        }
+    }
+
 }
 
 //bootRun {
 //    systemProperty 'application.test-data-enabled', 'true'
 //}
+
+
+tasks.matching { it.name in ['jar', 'bootJar'] }.configureEach {
+    archiveVersion.set("")
+}
 
 bootBuildImage {
 
