--- a/build.gradle
+++ b/build.gradle
@@ -111,32 +111,6 @@ tasks.named('bootBuildImage').configure {
 
 }
 
-//bootRun {
+tasks.named('bootRun').configure {
 //    systemProperty 'application.test-data-enabled', 'true'
-//}
-
-
-tasks.matching { it.name in ['jar', 'bootJar'] }.configureEach {
-    archiveVersion.set("")
-}
-
-bootBuildImage {
-
-    builder = "docker.io/paketobuildpacks/builder-jammy-base"
-    version = project.findProperty("version")
-    imageName = "flight-service" + ":" + version
-    publish = project.findProperty("publishImage")?.toBoolean() ?: false
-    environment = [
-            "BP_JVM_VERSION": JavaVersion.current().majorVersion
-    ]
-    verboseLogging = true
-
-    docker {
-        publishRegistry {
-            username = project.findProperty("registryUsername")
-            password = project.findProperty("registryToken")
-            url = project.findProperty("registryUrl")
-        }
-    }
-
 }
