fix: read set env variables from $GITHUB_ENV

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           expand: true
           path: './flight-service'
-          filenames: .env
+          filenames: '.env'
       - name: Export env variables to GitHub
         run: |
           echo "IMAGE_NAME_FLIGHT_SERVICE=${{ steps.dotenv.outputs.IMAGE_NAME_FLIGHT_SERVICE }}" >> $GITHUB_ENV
