fix: read set env variables from $GITHUB_ENV

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           path: '.env'
           export-variables: true
-          ensure-exists: false
+          ensure-exists: true
       - name: Checkout the source code
         uses: actions/checkout@v4
       - name: Set up the JDK
