fix: read set env variables from $GITHUB_ENV

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -13,6 +13,10 @@ jobs:
       contents: read
       security-events: write
     steps:
+      - name: List files in workspace
+        run: |
+          pwd
+          ls -al
       - name: Export env variables to GitHub
         id: dotenv
         uses: falti/dotenv-action@v1.1.4
