--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -1,10 +1,6 @@
 name: Commit Stage
 on: push
 
-#env:
-#  IMAGE_NAME: ghcr.io/vasimvahabov/flight-service
-#  VERSION: 0.1.1
-
 jobs:
   build:
     name: Build and Test
@@ -15,16 +11,6 @@ jobs:
     steps:
       - name: Checkout the source code
         uses: actions/checkout@v4
-      - name: Set up the JDK
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 21
-          cache: gradle
-      - name: List files in workspace
-        run: |
-          pwd
-          ls -al
       - name: Export env variables to GitHub
         id: dotenv
         uses: falti/dotenv-action@v1.1.4
@@ -32,6 +18,12 @@ jobs:
           path: '.env'
           export-variables: true
           ensure-exists: true
+      - name: Set up the JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 21
+          cache: gradle
       - name: Scan the code vulnerability
         uses: anchore/scan-action@v4
         id: scan
@@ -69,13 +61,13 @@ jobs:
       - name: Build the container image
         run: |
           chmod +x gradlew
-          ./gradlew printParameters bootBuildImage \
+          ./gradlew bootBuildImage \
           -Pversion=${IMAGE_VERSION_FLIGHT_SERVICE}
       - name: Scan OCI the image vulnerability
         uses: anchore/scan-action@v4
         id: scan
         with:
-          image: ${IMAGE_VERSION_FLIGHT_SERVICE}:${IMAGE_VERSION_FLIGHT_SERVICE}
+          image: ${IMAGE_NAME_FLIGHT_SERVICE}:${IMAGE_VERSION_FLIGHT_SERVICE}
           fail-build: false
           severity-cutoff: high
       - name: Upload the vulnerability report
@@ -86,7 +78,7 @@ jobs:
       - name: Log into the container registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ${REGISTRY}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish the container image
