fix : parts prevent to workflow

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -11,13 +11,6 @@ jobs:
     steps:
       - name: Checkout the source code
         uses: actions/checkout@v4
-      - name: Export env variables to GitHub
-        id: dotenv
-        uses: falti/dotenv-action@v1.1.4
-        with:
-          path: '.env'
-          export-variables: true
-          ensure-exists: true
       - name: Set up the JDK
         uses: actions/setup-java@v4
         with:
@@ -58,8 +51,8 @@ jobs:
           distribution: temurin
           java-version: 21
           cache: gradle
-      - name: Checkout the source code
-        uses: actions/checkout@v4
+      - name: Print all environment variables
+        run: env
       - name: Export env variables to GitHub
         id: dotenv
         uses: falti/dotenv-action@v1.1.4
