--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -64,12 +64,12 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew bootBuildImage \
-          -Pversion=${IMAGE_VERSION_FLIGHT_SERVICE}
+          -Pversion=${{ env.IMAGE_VERSION_FLIGHT_SERVICE }}
       - name: Scan OCI the image vulnerability
         uses: anchore/scan-action@v4
         id: scan
         with:
-          image: ${IMAGE_NAME_FLIGHT_SERVICE}:${IMAGE_VERSION_FLIGHT_SERVICE}
+          image: ${{ env.IMAGE_NAME_FLIGHT_SERVICE }}:${{ env.IMAGE_VERSION_FLIGHT_SERVICE }}
           fail-build: false
           severity-cutoff: high
       - name: Upload the vulnerability report
@@ -80,7 +80,7 @@ jobs:
       - name: Log into the container registry
         uses: docker/login-action@v3
         with:
-          registry: ${REGISTRY}
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish the container image
