fix : parts prevent to workflow

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -64,7 +64,7 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew bootBuildImage \
-          -Pversion=${{ env.IMAGE_VERSION_FLIGHT_SERVICE }}
+          -Pversion=$IMAGE_VERSION_FLIGHT_SERVICE
       - name: Scan OCI the image vulnerability
         uses: anchore/scan-action@v4
         id: scan
