--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -36,7 +36,7 @@ jobs:
   package:
     name: Package and Publish
     runs-on: ubuntu-22.04
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/dev' }}
     needs: [ build ]
     permissions:
       contents: read
@@ -63,6 +63,7 @@ jobs:
       - name: Build the container image
         run: |
           chmod +x gradlew
+          env
           echo "Using version: $IMAGE_VERSION_FLIGHT_SERVICE"
           ./gradlew bootBuildImage \
           -Pversion=$IMAGE_VERSION_FLIGHT_SERVICE
