fix : parts prevent to workflow

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -59,8 +59,6 @@ jobs:
           export-variables: true
           ensure-exists: true
           keys-case: 'upper'
-      - name: Print all environment variables
-        run: env
       - name: Build the container image
         run: |
           chmod +x gradlew
@@ -87,4 +85,4 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish the container image
-        run: docker push ${IMAGE_NAME_FLIGHT_SERVICE}:${IMAGE_VERSION_FLIGHT_SERVICE}
+        run: docker push ${{ env.IMAGE_NAME_FLIGHT_SERVICE }}:${{ env.IMAGE_VERSION_FLIGHT_SERVICE }}
