--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     username: user_postgres
     password: 6eEvI63t20
 #    url: jdbc:postgresql://localhost:5432/flights
-    url: jdbc:postgresql://postgres-flight-service:5432/flights
+    url: jdbc:postgresql://postgres-travel-booking-system:5432/flights
     hikari:
       maximum-pool-size: 5
       connection-timeout: 2000
@@ -30,7 +30,9 @@ spring:
 #      mode: always
   lifecycle:
     timeout-per-shutdown-phase: 15s
-
+  jpa:
+    hibernate:
+      ddl-auto: validate
 application:
   environment: Local
 
