fix : unsatisfied dependency

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,8 @@ dependencies {
 	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation "org.testcontainers:postgresql"
+    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
+    testImplementation "org.testcontainers:postgresql"
 
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
