--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,8 +18,8 @@ spring:
   datasource:
     username: user_postgres
     password: 6eEvI63t20
-#    url: jdbc:postgresql://localhost:5432/flights
-    url: jdbc:postgresql://postgres-travel-booking-system:5432/flights
+    url: jdbc:postgresql://localhost:5432/flights
+#    url: jdbc:postgresql://postgres-travel-booking-system:5432/flights
     hikari:
       maximum-pool-size: 5
       connection-timeout: 2000
