refactor: automate fetching Keycloak realm JSON via setupKeycloakTestResources task

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build, unit tests and integration tests
         run: |
           chmod +x gradlew
-          ./gradlew build
+          ./gradlew setupKeycloakTestResources build
   package:
     name: Package and Publish
     runs-on: ubuntu-22.04
