--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
+import de.undercouch.gradle.tasks.download.Download
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.4'
 	id 'io.spring.dependency-management' version '1.1.7'
+    id 'de.undercouch.download' version '5.6.0'
 }
 
 group = 'com.travelbookingsystem'
@@ -120,3 +123,12 @@ tasks.named('bootBuildImage').configure {
 tasks.named('bootRun').configure {
 //    systemProperty 'application.test-data-enabled', 'true'
 }
+
+tasks.register('setupKeycloakTestResources', Download) {
+    src 'https://raw.githubusercontent.com/vasimvahabov/travel-booking-system-deployment/main/docker/keycloak/realm/travel-booking-system-realm.json'
+    dest file('src/test/resources/keycloak/travel-booking-system-realm.json')
+
+    overwrite true
+}
+
+processTestResources.mustRunAfter setupKeycloakTestResources
