--- a/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/src/main/resources/db/changelog/db.changelog-master.yml
@@ -3,3 +3,6 @@ databaseChangeLog:
       file: classpath:/db/changelog/changes/db.changelog.1.0.yml
   - include:
       file: classpath:/db/changelog/changes/db.changelog.2.0.yml
+  - include:
+      file: classpath:/db/changelog/changes/db.changelog.3.0.yml
+
